Fix horizontal scrolling on layers

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -2581,3 +2581,7 @@ main {
 .pull-right {
   float: right;
 }
+.canvas .sidebar__body .items-spaced > li.selected::before,
+.canvas .sidebar__body .items-spaced > li.selected::after {
+  content: none;
+}
